# Rars-api

./: pyproject.toml  readme.md
src/: main.py  math.py
tests/: test_endpoints.py  test_websocket.py
